# todo

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.txt  README.md
apps/: CMakeLists.txt  main.cpp
include/todo_lib/: PersistenceController.h  TodoControl.h  TodoController.h  TodoModel.h  helloworld.h
src/: CMakeLists.txt  PersistenceController.cpp  TodoControl.cpp  TodoController.cpp  TodoModel.cpp  helloworld.cpp
